modify case file error and use new form attribute

--- a/HTML/1_4_6Html_table.html
+++ b/HTML/1_4_6Html_table.html
@@ -2,7 +2,7 @@
     <html lang="zh-CN">
 
     <head>
-        <metacharset="uft-8">
+        <metacharset="UTF-8">
             <title>表格基本语法</title>
     </head>
 
