--- a/HTML/1_4_3Html_div_and_span.html
+++ b/HTML/1_4_3Html_div_and_span.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <meta charset="UFT-8">
+    <meta charset="UTF-8">
     <title>html common label</title>
 </head>
 
